--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,10 @@ services:
 #            - TZ=Asia/Shanghai
             - MONGODB_PORT_27017_TCP_ADDR=mongodb
             - JUDGE_HOST=http://192.168.0.30:8888
-            - OJ_HOME=/$GOPATH/src
-            - DATA_PATH=$OJ_HOME/Data
-            - LOG_PATH=$OJ_HOME/log
+            - OJ_HOME=/go/src
+            - DATA_PATH=/go/src/Data
+            - LOG_PATH=/go/src/log
+            - RUN_PATH=/go/src/run
         networks:
             ojnet:
                 ipv4_address: 192.168.0.30
